<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="employee" type="ca.philrousse.android02.examen01.data.Employes"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:id="@+id/employee_id"
            android:layout_width="@dimen/field_id"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"


            android:text="@string/lbl_id"

            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/employee_nom"
            android:layout_width="@dimen/field_name"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"


            android:text="@string/lbl_lastName"

            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toEndOf="@+id/employee_id"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/employee_prenom"
            android:layout_width="@dimen/field_name"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"


            android:text="@string/lbl_firstName"

            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toEndOf="@+id/employee_nom"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/employee_sexe"
            android:layout_width="@dimen/field_sexe"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginTop="16dp"

            android:text="@string/lbl_sexe"

            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toEndOf="@+id/employee_prenom"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/employee_titre"
            android:layout_width="@dimen/field_title"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"


            android:text="@string/lbl_titre"

            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toStartOf="@+id/employee_salaire"
            app:layout_constraintTop_toTopOf="parent"
             />

        <TextView
            android:id="@+id/employee_salaire"
            android:text="@string/lbl_salaire"
            android:layout_width="@dimen/field_salary"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"

            android:layout_marginVertical="@dimen/default_margin"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>